# decaf

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  OPEN_SOURCE_PLAN.md  QUERY_SETUP.md  README.md  decaf.sh  ibkr-tax-prompt.md  pyproject.toml
.claude/skills/close/: SKILL.md
.claude/skills/start/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
doc/: ARCHITECTURE.md  BACKTEST.md  GUIDA_FISCALE.md  INTERNALS.md  NORMATIVA.md  QUERY_SETUP.md  manual_meta.yaml
examples/: README.md
examples/magnotta/: decaf_2024.xlsx  decaf_2024.yaml
examples/mascetti/: decaf_2024.xlsx  decaf_2024.yaml  decaf_2025.xlsx  decaf_2025.yaml
examples/mosconi/: decaf_2023.xlsx  decaf_2023.yaml  decaf_2024.xlsx  decaf_2024.yaml
scripts/: gen_examples.py  gen_schwab_pdfs.py  lint.sh  manual.sh  pdf_flatten_dests.py  test.sh  verify.sh
src/decaf/: __init__.py  __main__.py  cli.py  ecb_cache.py  forex.py  forex_gains.py  fx.py  holidays.py  models.py  output_cli.py  output_json.py  output_pdf.py  output_xls.py  output_yaml.py  parse.py  prices.py  quadro_rl.py  quadro_rt.py  quadro_rw.py  schwab_auth.py  schwab_client.py  schwab_gains_pdf.py  schwab_parse.py  schwab_vest_pdf.py  statement_store.py
src/ibtax/: __init__.py  __main__.py  cli.py  ecb_cache.py  forex.py  fx.py  models.py  output_json.py  output_pdf.py  output_xls.py  parse.py  quadro_rl.py  quadro_rt.py  quadro_rw.py
test_reference/: ecb_rates.db
tests/: conftest.py  test_architecture.py  test_e2e.py  test_forex.py  test_forex_gains.py  test_fx.py  test_holidays.py  test_parse.py  test_prices.py  test_quadro_rt.py  test_schwab_parse.py  test_statement_store.py
tests/reference/magnotta/: decaf_2024.yaml  ibkr_flex.xml
tests/reference/mascetti/: Individual_XXX066_Transactions_20250115-120000.json  Individual_XXX066_Transactions_20260115-120000.json  build_schwab.py  decaf_2024.yaml  decaf_2025.yaml  ibkr_flex_2024.xml  ibkr_flex_2025.xml  prices.yaml
tests/reference/mosconi/: Individual_XXX666_Transactions_20250115-120000.json  build_schwab.py  decaf_2023.yaml  decaf_2024.yaml  ibkr_flex_2023.xml  ibkr_flex_2024.xml  prices.yaml
