[project]
name = "decaf-tax"
version = "0.3.6"
description = "De-CAF: Italian tax report generator for foreign investments. Modello Redditi PF — no commercialista needed."
readme = "README.md"
license = "MIT"
authors = [{ name = "Marcello Barnaba", email = "vjt@openssl.it" }]
requires-python = ">=3.13"
keywords = ["italian-tax", "ivafe", "quadro-rw", "quadro-rt", "quadro-rl", "modello-redditi", "ibkr", "schwab", "ecb", "forex", "fifo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: Italian",
]
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "fpdf2>=2.8",
    "rich>=13.0",
    "yfinance>=0.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "ibkr-flex-client>=0.1",
    "ecb-fx-rates>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "reportlab>=4.0",  # used by scripts/gen_schwab_pdfs.py for synthetic fixtures
]

[project.scripts]
decaf = "decaf.cli:main"

[project.urls]
Homepage = "https://github.com/vjt/decaf"
Repository = "https://github.com/vjt/decaf"
Issues = "https://github.com/vjt/decaf/issues"
Changelog = "https://github.com/vjt/decaf/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 10

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "RUF002", # ambiguous unicode in docstring (× is intentional math notation)
    "RUF003", # ambiguous unicode in comment (× is intentional math notation)
]

[tool.ruff.lint.isort]
known-first-party = ["decaf"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]
venvPath = "."
venv = ".venv"
# schwab_auth/client are kept for future API use — aiohttp resolves at runtime
exclude = ["src/decaf/schwab_auth.py", "src/decaf/schwab_client.py"]
